# matlab-sys

./: Cargo.toml  README.md  RELEASE_CHECKLIST.md
.github/workflows/: run-matlab-tests.yml
matlab-sys/: Cargo.toml  build.rs
matlab-sys/src/: lib.rs  raw.rs
matlab-sys/src/raw/: bindings_700.rs  bindings_800.rs  interleaved_complex_impl.rs  separate_complex_impl.rs
mex-examples/array-product/: Cargo.toml
mex-examples/array-product/src/: lib.rs
mex-examples/array-size/: Cargo.toml
mex-examples/array-size/src/: lib.rs
mex-examples/explore/: Cargo.toml
mex-examples/explore/src/: lib.rs
mex-examples/mex-call-matlab/: Cargo.toml
mex-examples/mex-call-matlab/src/: lib.rs
tests/matlab_files/: test.m  test_explore_reference.txt
xtask/: Cargo.toml
xtask/src/: generate_bindings.rs  main.rs  publish.rs  reexport_versionless.rs  test.m  test.rs
