[package]
name = "matlab-sys"
version = "0.2.1"
edition = "2021"
authors = ["Tatstaturtaste <joshua.moellers@gmx.net>"]
readme = "../README.md"
license = "MIT OR Apache-2.0"
description = "Rust bindings for the Matlab C API"
keywords = ["matlab", "mex", "scientific", "matrix", "sys"]
categories = ["external-ffi-bindings", "api-bindings"]
repository = "https://github.com/Tastaturtaste/matlab-sys"

# Tell cargo and other crates that we link against the Matlab API. "mex" would be another sensible links value, but since not only the mex API but also the matrix, mat and engine API are linked, "matlab" as the more general value is preferred. 
links = "matlab"

[features]
# Use the modern interleaved complex api available since Matlab 2018a.
interleaved-complex = []
# Use the old separate complex api.
separate-complex = []
# Link with the necessary runtime libraries provided by matlab. The path to the matlab installation to be used has to be specified in the environment variable 'MATLABPATH'  or will be searched for by calling out to matlab itself. 
# Alternatively the libary can be specified in a .config file with the rustc-link-lib and rustc-link-search keys (https://doc.rust-lang.org/cargo/reference/config.html).
link-lib = []
default = ["interleaved-complex", "link-lib"]
