[package]
name = "matlab-sys"
version = "0.3.1"
edition = "2021"
authors = ["Tastaturtaste <joshua.moellers@gmx.net>"]
readme = "./README.md"
license = "MIT OR Apache-2.0"
description = "Rust bindings for the Matlab C API"
keywords = ["matlab", "mex", "scientific", "matrix", "sys"]
categories = ["external-ffi-bindings", "api-bindings"]
repository = "https://github.com/Tastaturtaste/matlab-sys"

# Tell cargo and other crates that we link against the Matlab API. "mex" would be another sensible links value, but since not only the mex API but also the matrix, mat and engine API are linked, "matlab" as the more general value is preferred. 
links = "matlab"

[features]
# Use the modern interleaved complex api available since Matlab 2018a.
interleaved-complex = []
# Use the old separate complex api.
separate-complex = []
# By default the more modern and type safe API is exposed. Use this by default, unless you have to support Matlab releases prior to R2018a.
default = ["interleaved-complex"]
