[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindgen = "0.63.0"
pico-args = { version = "0.5.0", features = ["eq-separator"] }
regex = "1.7.1"
anyhow = "1.0.68"
